Bug 1260944 - Fix ANGLE D3D WARP for WebGL. - r=jrmuizel